--- a/index.html
+++ b/index.html
@@ -4,6 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Orangy</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/header.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="header__information">
+        <div class="icon__arrow arrow__left">
+          <i class="fa-solid fa-angle-left"></i>
+        </div>
+        <div class="header__phone turn__off">
+          <a href="tel:+84123456789">(+84) 12 34 5678</a>
+        </div>
+        <div class="header__address">
+          <a href=""> 78 Trung Kinh, Yen Hoa, Cau Giay, HaNoi</a>
+        </div>
+        <div class="icon__arrow arrow_right">
+          <i class="fa-solid fa-angle-right"></i>
+        </div>
+      </div>
+      <div class="header__logo">ORANGY</div>
+    </header>
+  </body>
+  <script type="module" src="./js/header.js"></script>
 </html>
