our-service: create banner

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/header.css" />
+    <link rel="stylesheet" href="./css/banner.css" />
   </head>
   <body>
     <header>
@@ -34,6 +35,16 @@
       </div>
       <div class="header__logo">ORANGY</div>
     </header>
+    <!-- phần banner -->
+    <div class="banner">
+        <div class="banner__content">
+          <h1>EMBRACE VISION</h1>
+          <h4>Clever products for every corne</h4>
+          <p>explore now
+          <hr/>
+          </p>
+        </div>
+       </div>
   </body>
   <script type="module" src="./js/header.js"></script>
 </html>
