--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/banner.css" />
     <link rel="stylesheet" href="./css/product.css">
+    <link rel="stylesheet" href="./css/productSlider.css">
   </head>
   <body>
     <header>
@@ -67,8 +68,26 @@
          <div id="product__container" class="product__gird">
          </div>
        </div>
+
+       <!-- product slider -->
+
+       <div class="slider__title">
+        <h1>Discover unique items</h1>
+       </div>
+     <div class="slider">
+       <div class="slider__list ">
+          <div class="splide" role="group" aria-label="Splide Basic HTML Example"> <!-- visibility -->
+          <div class="splide__track">
+            <ul id="splide__list" class="splide__list">
+           
+            </ul>
+          </div>
+        </div>
+       </div>
+     </div>
   </body>
   <script type="module" src="./js/app.js"></script>
   <script type="module" src="./js/header.js"></script>
+  <script type="module" src="./js/splide.js"></script>
   <script type="module" src="./js/data.js"></script>
 </html>
