--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./css/banner.css" />
     <link rel="stylesheet" href="./css/product.css">
     <link rel="stylesheet" href="./css/productSlider.css">
+    <link rel="stylesheet" href="./css/textCarousel.css">
   </head>
   <body>
     <header>
@@ -85,6 +86,11 @@
         </div>
        </div>
      </div>
+
+      <!-- Text Carousel -->
+      <div class="marquee-container">
+        <span class="marquee-text">FIND INSPRATION * DESIGN FOR LIVING * UNIQUE FURNITURE</span>
+      </div>
   </body>
   <script type="module" src="./js/app.js"></script>
   <script type="module" src="./js/header.js"></script>
