--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="./css/product.css">
     <link rel="stylesheet" href="./css/productSlider.css">
     <link rel="stylesheet" href="./css/textCarousel.css">
+    <link rel="stylesheet" href="./css/saleBlcok.css">
   </head>
   <body>
     <header>
@@ -90,6 +91,26 @@
       <!-- Text Carousel -->
       <div class="marquee-container">
         <span class="marquee-text">FIND INSPRATION * DESIGN FOR LIVING * UNIQUE FURNITURE</span>
+      </div>
+
+      <!--Sale Block-->
+      <div class="wrapper__block">
+        <div class="wrapper__image">
+          <img src="./images/product_2.jpg" alt="">
+        </div>
+        <div class="wrapper__title">
+          <div class="title__header">
+            <p>Season Sale Collections</p>
+          </div>
+          <div class="title__body">
+            <h1>SALE 30% OFF</h1>
+            <p>Save extra on our sale collection
+              *Runs until 14:00pm PST</p>
+          </div>
+        </div>
+        <div class="wrapper__image">
+          <img src="./images/product_2.jpg" alt="">
+        </div>
       </div>
   </body>
   <script type="module" src="./js/app.js"></script>
