our-service: create inspiration

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="./css/productSlider.css">
     <link rel="stylesheet" href="./css/textCarousel.css">
     <link rel="stylesheet" href="./css/saleBlcok.css">
+    <link rel="stylesheet" href="./css/inspiration.css">
   </head>
   <body>
     <header>
@@ -112,6 +113,39 @@
           <img src="./images/product_2.jpg" alt="">
         </div>
       </div>
+
+      <!-- Inspiration -->
+      <div class="inspiration">
+        <div class="inspiration__title">
+          <h2>Change the look of your house,
+            change the perspective of others</h2>
+        </div>
+        <div class="inspiration__full">
+
+          <div id="scrollContainer" class="inspiration__body">
+              <div class="inspiration__item">
+                <img class="inspiration__image " src="./images/items_1.png" alt="">
+                <h3>Interior work</h3>
+                <p>Crafting spaces through meticulous planning, material selection, and creative execution, enhancing aesthetics and functionality.</p>
+              </div>
+              <div class="inspiration__item">
+                <img class="inspiration__image " src="./images/items_2.png" alt="">
+                <h3>Interior work</h3>
+                <p>Crafting spaces through meticulous planning, material selection, and creative execution, enhancing aesthetics and functionality.</p>
+              </div>
+              <div class="inspiration__item">
+                <img class="inspiration__image " src="./images/items_1.png" alt="">
+                <h3>Interior work</h3>
+                <p>Crafting spaces through meticulous planning, material selection, and creative execution, enhancing aesthetics and functionality.</p>
+              </div>
+              <div class="inspiration__item">
+                <img class="inspiration__image " src="./images/items_2.png" alt="">
+                <h3>Interior work</h3>
+                <p>Crafting spaces through meticulous planning, material selection, and creative execution, enhancing aesthetics and functionality.</p>
+              </div>
+            </div>
+        </div>
+       </div>
   </body>
   <script type="module" src="./js/app.js"></script>
   <script type="module" src="./js/header.js"></script>
