--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="./css/textCarousel.css">
     <link rel="stylesheet" href="./css/saleBlcok.css">
     <link rel="stylesheet" href="./css/inspiration.css">
+    <link rel="stylesheet" href="./css/singleBanner.css">
   </head>
   <body>
     <header>
@@ -145,7 +146,14 @@
               </div>
             </div>
         </div>
-       </div>
+       </div>   
+       <!-- single banner -->
+       <div class="single__banner">
+        <div class="single__text">
+          <h2>Elevate Your Home</h2>
+          <p>Clever products for every corner</p>
+        </div>
+      </div>   
   </body>
   <script type="module" src="./js/app.js"></script>
   <script type="module" src="./js/header.js"></script>
