--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="./css/saleBlcok.css">
     <link rel="stylesheet" href="./css/inspiration.css">
     <link rel="stylesheet" href="./css/singleBanner.css">
+    <link rel="stylesheet" href="./css/contac.css">
   </head>
   <body>
     <header>
@@ -153,7 +154,30 @@
           <h2>Elevate Your Home</h2>
           <p>Clever products for every corner</p>
         </div>
-      </div>   
+      </div>  
+              <!-- contact shop -->
+              <div class="contact">
+                <div class="contact__left">
+                  <img class="image__contact_1" src="./images/contact_1.png" alt="">
+                  <img class="image__contact_2" src="./images/contact_2.png" alt="">
+                  <img class="image__contact_3" src="./images/contact_3.png" alt="">
+                </div>
+                <div class="contact__between">
+                  <div class="contact__body">
+                    <div class="contact__tile">
+                      <p>Renovate your home AT</p>
+                      <h3>78 Trung Kinh, Yen Hoa, Cau Giay, Hanoi</h3>
+                    </div>
+                    <div class="contact__btn">
+                      <button>@ORANGY</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="contact__right">
+                  <img class="image__contact_4" src="./images/contact_4.png" alt="">
+                  <img class="image__contact_5" src="./images/contact_5.png" alt="">
+                </div>
+              </div> 
   </body>
   <script type="module" src="./js/app.js"></script>
   <script type="module" src="./js/header.js"></script>
