--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="./css/inspiration.css">
     <link rel="stylesheet" href="./css/singleBanner.css">
     <link rel="stylesheet" href="./css/contac.css">
+    <link rel="stylesheet" href="./css/footer.css">
   </head>
   <body>
     <header>
@@ -178,6 +179,25 @@
                   <img class="image__contact_5" src="./images/contact_5.png" alt="">
                 </div>
               </div> 
+              <footer>
+                <div class="footer">
+                  <h2>Subscribe to get 10% OFF</h2>
+                  <p>Subscribe for store updates and discounts.</p>
+                  <div class="footer__input">
+                    <input type="text" placeholder="Email">
+                    <i class="fa-solid fa-angle-right"></i>
+                  </div>
+                  <div class="icon">
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-x-twitter"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-tiktok"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                    <i class="fa-brands fa-vimeo"></i>
+                  </div>
+                  <p>© 2024 Orangy</p>
+                </div>
+              </footer>
   </body>
   <script type="module" src="./js/app.js"></script>
   <script type="module" src="./js/header.js"></script>
