our-service: reponsive mobile

--- a/index.html
+++ b/index.html
@@ -55,19 +55,22 @@
        </div>
 
        <!-- phần product -->
-      <div class="product__title">
-        <div class="product__menu-left"><h1>         
-          Our picks for you
-        </h1>
-      </div>
-        <div class="product__menu-right">
-          <span class="product__menu--title" data-category="seating"  onclick="selectItem(this)"  >SEATING</span>
-          <span class="product__menu--title" data-category="table" onclick="selectItem(this)">TABLE </span>
-          <span class="product__menu--title" data-category="storage" onclick="selectItem(this)" >STORAGE </span>
-          <span class="product__menu--title" data-category="lighting" onclick="selectItem(this)" >LIGHTING </span>
-          <span class="product__menu--title" data-category="decor" onclick="selectItem(this)"  >DECOR </span>
-        </div>
-      </div>
+      
+          <div class="product__title">
+            <div class="product__menu-left">
+              <h1>         
+              Our picks for you
+            </h1>
+          </div>
+            <div class="product__menu-right">
+              <span class="product__menu--title" data-category="seating"  onclick="selectItem(this)"  >SEATING</span>
+              <span class="product__menu--title" data-category="table" onclick="selectItem(this)">TABLE </span>
+              <span class="product__menu--title" data-category="storage" onclick="selectItem(this)" >STORAGE </span>
+              <span class="product__menu--title" data-category="lighting" onclick="selectItem(this)" >LIGHTING </span>
+              <span class="product__menu--title" data-category="decor" onclick="selectItem(this)"  >DECOR </span>
+            </div>
+          </div>
+ 
       <!-- product gird  -->
        <!-- CSS lại -->
        <div class="product__gird--list">
@@ -137,12 +140,12 @@
                 <p>Crafting spaces through meticulous planning, material selection, and creative execution, enhancing aesthetics and functionality.</p>
               </div>
               <div class="inspiration__item">
-                <img class="inspiration__image " src="./images/items_1.png" alt="">
+                <img class="inspiration__image " src="./images/items_3.jpg" alt="">
                 <h3>Interior work</h3>
                 <p>Crafting spaces through meticulous planning, material selection, and creative execution, enhancing aesthetics and functionality.</p>
               </div>
               <div class="inspiration__item">
-                <img class="inspiration__image " src="./images/items_2.png" alt="">
+                <img class="inspiration__image " src="./images/items_4.png" alt="">
                 <h3>Interior work</h3>
                 <p>Crafting spaces through meticulous planning, material selection, and creative execution, enhancing aesthetics and functionality.</p>
               </div>
@@ -156,6 +159,38 @@
           <p>Clever products for every corner</p>
         </div>
       </div>  
+      <!-- over service -->
+      <div class="icon__list">
+        <div class="icon__item">
+          <img src="./images/icon_1.png" alt="">
+          <div class="icon__title">
+            <h4>Free & fast delivery</h4>
+            <p>We offer free shipping with ground delivery to the lower 48 states.</p>
+          </div>
+        </div>
+        <div class="icon__item">
+          <img src="./images/icon_2.png" alt="">
+          <div class="icon__title">
+            <h4>Online support</h4>
+            <p>Online Support24 hours a day,
+              7 days a week</p>
+          </div>
+        </div>
+        <div class="icon__item">
+          <img src="./images/icon_3.png" alt="">
+          <div class="icon__title">
+            <h4>30 Days return</h4>
+            <p>Exchange or return items free of charge within 30 days.</p>
+          </div>
+        </div>
+        <div class="icon__item">
+          <img src="./images/icon_4.png" alt="">
+          <div class="icon__title">
+            <h4>Flexible payment</h4>
+            <p>Pay conveniently using multiple credit cards for added flexibility.</p>
+          </div>
+        </div>
+       </div>
               <!-- contact shop -->
               <div class="contact">
                 <div class="contact__left">
