--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/banner.css" />
-    <link rel="stylesheet" href="./css/product.css">
-    <link rel="stylesheet" href="./css/productSlider.css">
-    <link rel="stylesheet" href="./css/textCarousel.css">
-    <link rel="stylesheet" href="./css/saleBlcok.css">
-    <link rel="stylesheet" href="./css/inspiration.css">
-    <link rel="stylesheet" href="./css/singleBanner.css">
-    <link rel="stylesheet" href="./css/contac.css">
-    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/product.css" />
+    <link rel="stylesheet" href="./css/productSlider.css" />
+    <link rel="stylesheet" href="./css/textCarousel.css" />
+    <link rel="stylesheet" href="./css/saleBlcok.css" />
+    <link rel="stylesheet" href="./css/inspiration.css" />
+    <link rel="stylesheet" href="./css/singleBanner.css" />
+    <link rel="stylesheet" href="./css/contac.css" />
+    <link rel="stylesheet" href="./css/footer.css" />
   </head>
   <body>
     <header>
@@ -45,194 +45,220 @@
     </header>
     <!-- phần banner -->
     <div class="banner">
-        <div class="banner__content">
-          <h1>EMBRACE VISION</h1>
-          <h4>Clever products for every corne</h4>
-          <p>explore now
-          <hr/>
+      <div class="banner__content">
+        <h1>EMBRACE VISION</h1>
+        <h4>Clever products for every corner</h4>
+        <div class="banner__content__title">
+          <p>EXPLORE NOW</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- phần product -->
+
+    <div class="product__title">
+      <div class="product__menu-left">
+        <h1>Our picks for you</h1>
+      </div>
+      <div class="product__menu-right">
+        <span
+          class="product__menu--title category__title"
+          data-category="seating"
+          >SEATING</span
+        >
+        <span class="product__menu--title category__title" data-category="table"
+          >TABLE
+        </span>
+        <span
+          class="product__menu--title category__title"
+          data-category="storage"
+          >STORAGE
+        </span>
+        <span
+          class="product__menu--title category__title"
+          data-category="lighting"
+          >LIGHTING
+        </span>
+        <span class="product__menu--title category__title" data-category="decor"
+          >DECOR
+        </span>
+      </div>
+    </div>
+
+    <!-- product gird  -->
+    <!-- CSS lại -->
+    <div class="product__gird--list">
+      <div id="product__container" class="product__gird"></div>
+    </div>
+
+    <!-- product slider -->
+
+    <div class="slider__title">
+      <h1>Discover unique items</h1>
+    </div>
+    <div class="slider">
+      <div class="slider__list">
+        <div class="splide" role="group" aria-label="Splide Basic HTML Example">
+          <!-- visibility -->
+          <div class="splide__track">
+            <ul id="splide__list" class="splide__list"></ul>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Text Carousel -->
+    <div class="marquee-container">
+      <span class="marquee-text"
+        >FIND INSPRATION * DESIGN FOR LIVING * UNIQUE FURNITURE</span
+      >
+    </div>
+
+    <!--Sale Block-->
+    <div class="wrapper__block">
+      <div class="wrapper__image">
+        <img src="./images/product_2.jpg" alt="" />
+      </div>
+      <div class="wrapper__title">
+        <div class="title__header">
+          <p>Season Sale Collections</p>
+        </div>
+        <div class="title__body">
+          <h1>SALE 30% OFF</h1>
+          <p>Save extra on our sale collection *Runs until 14:00pm PST</p>
+        </div>
+      </div>
+      <div class="wrapper__image">
+        <img src="./images/product_2.jpg" alt="" />
+      </div>
+    </div>
+
+    <!-- Inspiration -->
+    <div class="inspiration">
+      <div class="inspiration__title">
+        <h2>Change the look of your house, change the perspective of others</h2>
+      </div>
+      <div class="inspiration__full">
+        <div id="scrollContainer" class="inspiration__body">
+          <div class="inspiration__item">
+            <img class="inspiration__image" src="./images/items_1.png" alt="" />
+            <h3>Interior work</h3>
+            <p>
+              Crafting spaces through meticulous planning, material selection,
+              and creative execution, enhancing aesthetics and functionality.
+            </p>
+          </div>
+          <div class="inspiration__item">
+            <img class="inspiration__image" src="./images/items_2.png" alt="" />
+            <h3>Interior work</h3>
+            <p>
+              Crafting spaces through meticulous planning, material selection,
+              and creative execution, enhancing aesthetics and functionality.
+            </p>
+          </div>
+          <div class="inspiration__item">
+            <img class="inspiration__image" src="./images/items_3.jpg" alt="" />
+            <h3>Interior work</h3>
+            <p>
+              Crafting spaces through meticulous planning, material selection,
+              and creative execution, enhancing aesthetics and functionality.
+            </p>
+          </div>
+          <div class="inspiration__item">
+            <img class="inspiration__image" src="./images/items_4.png" alt="" />
+            <h3>Interior work</h3>
+            <p>
+              Crafting spaces through meticulous planning, material selection,
+              and creative execution, enhancing aesthetics and functionality.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- single banner -->
+    <div class="single__banner">
+      <div class="single__text">
+        <h2>Elevate Your Home</h2>
+        <p>Clever products for every corner</p>
+      </div>
+    </div>
+    <!-- over service -->
+    <div class="icon__list">
+      <div class="icon__item">
+        <img src="./images/icon_1.png" alt="" />
+        <div class="icon__title">
+          <h4>Free & fast delivery</h4>
+          <p>
+            We offer free shipping with ground delivery to the lower 48 states.
           </p>
         </div>
-       </div>
-
-       <!-- phần product -->
-      
-          <div class="product__title">
-            <div class="product__menu-left">
-              <h1>         
-              Our picks for you
-            </h1>
-          </div>
-            <div class="product__menu-right">
-              <span class="product__menu--title" data-category="seating"  onclick="selectItem(this)"  >SEATING</span>
-              <span class="product__menu--title" data-category="table" onclick="selectItem(this)">TABLE </span>
-              <span class="product__menu--title" data-category="storage" onclick="selectItem(this)" >STORAGE </span>
-              <span class="product__menu--title" data-category="lighting" onclick="selectItem(this)" >LIGHTING </span>
-              <span class="product__menu--title" data-category="decor" onclick="selectItem(this)"  >DECOR </span>
-            </div>
-          </div>
- 
-      <!-- product gird  -->
-       <!-- CSS lại -->
-       <div class="product__gird--list">
-         <div id="product__container" class="product__gird">
-         </div>
-       </div>
-
-       <!-- product slider -->
-
-       <div class="slider__title">
-        <h1>Discover unique items</h1>
-       </div>
-     <div class="slider">
-       <div class="slider__list ">
-          <div class="splide" role="group" aria-label="Splide Basic HTML Example"> <!-- visibility -->
-          <div class="splide__track">
-            <ul id="splide__list" class="splide__list">
-           
-            </ul>
-          </div>
-        </div>
-       </div>
-     </div>
-
-      <!-- Text Carousel -->
-      <div class="marquee-container">
-        <span class="marquee-text">FIND INSPRATION * DESIGN FOR LIVING * UNIQUE FURNITURE</span>
       </div>
-
-      <!--Sale Block-->
-      <div class="wrapper__block">
-        <div class="wrapper__image">
-          <img src="./images/product_2.jpg" alt="">
-        </div>
-        <div class="wrapper__title">
-          <div class="title__header">
-            <p>Season Sale Collections</p>
-          </div>
-          <div class="title__body">
-            <h1>SALE 30% OFF</h1>
-            <p>Save extra on our sale collection
-              *Runs until 14:00pm PST</p>
-          </div>
-        </div>
-        <div class="wrapper__image">
-          <img src="./images/product_2.jpg" alt="">
+      <div class="icon__item">
+        <img src="./images/icon_2.png" alt="" />
+        <div class="icon__title">
+          <h4>Online support</h4>
+          <p>Online Support24 hours a day, 7 days a week</p>
         </div>
       </div>
-
-      <!-- Inspiration -->
-      <div class="inspiration">
-        <div class="inspiration__title">
-          <h2>Change the look of your house,
-            change the perspective of others</h2>
+      <div class="icon__item">
+        <img src="./images/icon_3.png" alt="" />
+        <div class="icon__title">
+          <h4>30 Days return</h4>
+          <p>Exchange or return items free of charge within 30 days.</p>
         </div>
-        <div class="inspiration__full">
-
-          <div id="scrollContainer" class="inspiration__body">
-              <div class="inspiration__item">
-                <img class="inspiration__image " src="./images/items_1.png" alt="">
-                <h3>Interior work</h3>
-                <p>Crafting spaces through meticulous planning, material selection, and creative execution, enhancing aesthetics and functionality.</p>
-              </div>
-              <div class="inspiration__item">
-                <img class="inspiration__image " src="./images/items_2.png" alt="">
-                <h3>Interior work</h3>
-                <p>Crafting spaces through meticulous planning, material selection, and creative execution, enhancing aesthetics and functionality.</p>
-              </div>
-              <div class="inspiration__item">
-                <img class="inspiration__image " src="./images/items_3.jpg" alt="">
-                <h3>Interior work</h3>
-                <p>Crafting spaces through meticulous planning, material selection, and creative execution, enhancing aesthetics and functionality.</p>
-              </div>
-              <div class="inspiration__item">
-                <img class="inspiration__image " src="./images/items_4.png" alt="">
-                <h3>Interior work</h3>
-                <p>Crafting spaces through meticulous planning, material selection, and creative execution, enhancing aesthetics and functionality.</p>
-              </div>
-            </div>
+      </div>
+      <div class="icon__item">
+        <img src="./images/icon_4.png" alt="" />
+        <div class="icon__title">
+          <h4>Flexible payment</h4>
+          <p>
+            Pay conveniently using multiple credit cards for added flexibility.
+          </p>
         </div>
-       </div>   
-       <!-- single banner -->
-       <div class="single__banner">
-        <div class="single__text">
-          <h2>Elevate Your Home</h2>
-          <p>Clever products for every corner</p>
-        </div>
-      </div>  
-      <!-- over service -->
-      <div class="icon__list">
-        <div class="icon__item">
-          <img src="./images/icon_1.png" alt="">
-          <div class="icon__title">
-            <h4>Free & fast delivery</h4>
-            <p>We offer free shipping with ground delivery to the lower 48 states.</p>
+      </div>
+    </div>
+    <!-- contact shop -->
+    <div class="contact">
+      <div class="contact__left">
+        <img class="image__contact_1" src="./images/contact_1.png" alt="" />
+        <img class="image__contact_2" src="./images/contact_2.png" alt="" />
+        <img class="image__contact_3" src="./images/contact_3.png" alt="" />
+      </div>
+      <div class="contact__between">
+        <div class="contact__body">
+          <div class="contact__tile">
+            <p>Renovate your home AT</p>
+            <h3>78 Trung Kinh, Yen Hoa, Cau Giay, Hanoi</h3>
+          </div>
+          <div class="contact__btn">
+            <button>@ORANGY</button>
           </div>
         </div>
-        <div class="icon__item">
-          <img src="./images/icon_2.png" alt="">
-          <div class="icon__title">
-            <h4>Online support</h4>
-            <p>Online Support24 hours a day,
-              7 days a week</p>
-          </div>
+      </div>
+      <div class="contact__right">
+        <img class="image__contact_4" src="./images/contact_4.png" alt="" />
+        <img class="image__contact_5" src="./images/contact_5.png" alt="" />
+      </div>
+    </div>
+    <footer>
+      <div class="footer">
+        <h2>Subscribe to get 10% OFF</h2>
+        <p>Subscribe for store updates and discounts.</p>
+        <div class="footer__input">
+          <input type="text" placeholder="Email" />
+          <i class="fa-solid fa-angle-right"></i>
         </div>
-        <div class="icon__item">
-          <img src="./images/icon_3.png" alt="">
-          <div class="icon__title">
-            <h4>30 Days return</h4>
-            <p>Exchange or return items free of charge within 30 days.</p>
-          </div>
+        <div class="icon">
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-x-twitter"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-tiktok"></i>
+          <i class="fa-brands fa-youtube"></i>
+          <i class="fa-brands fa-vimeo"></i>
         </div>
-        <div class="icon__item">
-          <img src="./images/icon_4.png" alt="">
-          <div class="icon__title">
-            <h4>Flexible payment</h4>
-            <p>Pay conveniently using multiple credit cards for added flexibility.</p>
-          </div>
-        </div>
-       </div>
-              <!-- contact shop -->
-              <div class="contact">
-                <div class="contact__left">
-                  <img class="image__contact_1" src="./images/contact_1.png" alt="">
-                  <img class="image__contact_2" src="./images/contact_2.png" alt="">
-                  <img class="image__contact_3" src="./images/contact_3.png" alt="">
-                </div>
-                <div class="contact__between">
-                  <div class="contact__body">
-                    <div class="contact__tile">
-                      <p>Renovate your home AT</p>
-                      <h3>78 Trung Kinh, Yen Hoa, Cau Giay, Hanoi</h3>
-                    </div>
-                    <div class="contact__btn">
-                      <button>@ORANGY</button>
-                    </div>
-                  </div>
-                </div>
-                <div class="contact__right">
-                  <img class="image__contact_4" src="./images/contact_4.png" alt="">
-                  <img class="image__contact_5" src="./images/contact_5.png" alt="">
-                </div>
-              </div> 
-              <footer>
-                <div class="footer">
-                  <h2>Subscribe to get 10% OFF</h2>
-                  <p>Subscribe for store updates and discounts.</p>
-                  <div class="footer__input">
-                    <input type="text" placeholder="Email">
-                    <i class="fa-solid fa-angle-right"></i>
-                  </div>
-                  <div class="icon">
-                    <i class="fa-brands fa-facebook"></i>
-                    <i class="fa-brands fa-x-twitter"></i>
-                    <i class="fa-brands fa-instagram"></i>
-                    <i class="fa-brands fa-tiktok"></i>
-                    <i class="fa-brands fa-youtube"></i>
-                    <i class="fa-brands fa-vimeo"></i>
-                  </div>
-                  <p>© 2024 Orangy</p>
-                </div>
-              </footer>
+        <p>© 2024 Orangy</p>
+      </div>
+    </footer>
   </body>
   <script type="module" src="./js/app.js"></script>
   <script type="module" src="./js/header.js"></script>
