--- a/index.html
+++ b/index.html
@@ -264,4 +264,5 @@
   <script type="module" src="./js/header.js"></script>
   <script type="module" src="./js/splide.js"></script>
   <script type="module" src="./js/data.js"></script>
+  <script type="module" src="./js/product__all_list.js"></script>
 </html>
