our-service: edit pixel

--- a/index.html
+++ b/index.html
@@ -55,33 +55,38 @@
     </div>
 
     <!-- phần product -->
-
-    <div class="product__title">
-      <div class="product__menu-left">
-        <h1>Our picks for you</h1>
-      </div>
-      <div class="product__menu-right">
-        <span
-          class="product__menu--title category__title"
-          data-category="seating"
-          >SEATING</span
-        >
-        <span class="product__menu--title category__title" data-category="table"
-          >TABLE
-        </span>
-        <span
-          class="product__menu--title category__title"
-          data-category="storage"
-          >STORAGE
-        </span>
-        <span
-          class="product__menu--title category__title"
-          data-category="lighting"
-          >LIGHTING
-        </span>
-        <span class="product__menu--title category__title" data-category="decor"
-          >DECOR
-        </span>
+    <div class="product__title__all">
+      <div class="product__title">
+        <div class="product__menu-left">
+          <h1>Our picks for you</h1>
+        </div>
+        <div class="product__menu-right">
+          <span
+            class="product__menu--title category__title"
+            data-category="seating"
+            >SEATING</span
+          >
+          <span
+            class="product__menu--title category__title"
+            data-category="table"
+            >TABLE
+          </span>
+          <span
+            class="product__menu--title category__title"
+            data-category="storage"
+            >STORAGE
+          </span>
+          <span
+            class="product__menu--title category__title"
+            data-category="lighting"
+            >LIGHTING
+          </span>
+          <span
+            class="product__menu--title category__title"
+            data-category="decor"
+            >DECOR
+          </span>
+        </div>
       </div>
     </div>
 
@@ -99,7 +104,6 @@
     <div class="slider">
       <div class="slider__list">
         <div class="splide" role="group" aria-label="Splide Basic HTML Example">
-          <!-- visibility -->
           <div class="splide__track">
             <ul id="splide__list" class="splide__list"></ul>
           </div>
@@ -121,7 +125,7 @@
       </div>
       <div class="wrapper__title">
         <div class="title__header">
-          <p>Season Sale Collections</p>
+          <p>SEASON SALE COLLECTIONS</p>
         </div>
         <div class="title__body">
           <h1>SALE 30% OFF</h1>
