our service: completed media editting of 1920px

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
       <div class="contact__between">
         <div class="contact__body">
           <div class="contact__tile">
-            <p>Renovate your home AT</p>
+            <span>RENOVATE YOUR HOME AT</span>
             <h3>78 Trung Kinh, Yen Hoa, Cau Giay, Hanoi</h3>
           </div>
           <div class="contact__btn">
